@@ -50,6 +50,7 @@ class ProjectSettingsWin : private GladeFileLoader {
   Gtk::Entry * entry_server_url;
   Gtk::Entry * entry_pixel_per_um;
   Gtk::Entry * entry_template_dimension;
+  Gtk::Entry * entry_font_size;
 
   bool ok_clicked;
 
